--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+body {
+  font-family: sans-serif;
+  background-color: #0f0316;
+  color: #e7e7e7;
+}
 
+header {
+  width: 100%;
+  height: 15vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.4em;
+  background-color: #1e062c;
+  border-radius: 20px;
+  box-shadow: 0 0 8px 5px black;
+}
 
 /*# sourceMappingURL=style.css.map */
